--- a/src/Startup/CrestApps.Aspire.AppHost/appsettings.json
+++ b/src/Startup/CrestApps.Aspire.AppHost/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dcp": "Warning"
     }
+  },
+  "Aspire": {
+    "EnableOllama": true,
+    "EnableFoundry": true
   }
 }
