1st. push working code next step add Tool document reader.

--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/CrestApps.OrchardCore.AI.Chat.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/CrestApps.OrchardCore.AI.Chat.csproj
@@ -39,4 +39,8 @@
     <ProjectReference Include="..\CrestApps.OrchardCore.SignalR\CrestApps.OrchardCore.SignalR.csproj" PrivateAssets="none" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\CustomChat\" />
+  </ItemGroup>
+
 </Project>
