--- a/src/Modules/CrestApps.OrchardCore.Resources/package.json
+++ b/src/Modules/CrestApps.OrchardCore.Resources/package.json
@@ -6,6 +6,7 @@
     "vuejs": "npm:vue@2.6.13",
     "@fortawesome/fontawesome-free": "6.7.2",
     "easymde": "2.18.0",
-    "vuedraggable": "2.24.3"
+    "vuedraggable": "2.24.3",
+    "marked": "^15.0.7"
   }
 }
