--- a/src/Abstractions/CrestApps.OrchardCore.AI.Abstractions/CrestApps.OrchardCore.AI.Abstractions.csproj
+++ b/src/Abstractions/CrestApps.OrchardCore.AI.Abstractions/CrestApps.OrchardCore.AI.Abstractions.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="OrchardCore.Infrastructure.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.AI.Abstractions" />
+    <PackageReference Include="OrchardCore.Indexing.Abstractions" />
   </ItemGroup>
 
   <ItemGroup>
