--- a/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions.Documents/CrestApps.OrchardCore.AI.Chat.Interactions.Documents.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions.Documents/CrestApps.OrchardCore.AI.Chat.Interactions.Documents.csproj
@@ -22,14 +22,11 @@
     <PackageReference Include="OrchardCore.DisplayManagement" />
     <PackageReference Include="OrchardCore.ResourceManagement" />
     <PackageReference Include="OrchardCore.Infrastructure.Abstractions" />
-    <PackageReference Include="OrchardCore.Search.AzureAI.Core" />
-    <PackageReference Include="Azure.Search.Documents" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.AI.Chat.Interactions.Core\CrestApps.OrchardCore.AI.Chat.Interactions.Core.csproj" />
     <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.AI.Core\CrestApps.OrchardCore.AI.Core.csproj" />
-    <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.SignalR.Core\CrestApps.OrchardCore.SignalR.Core.csproj" />
-    <ProjectReference Include="..\..\Core\CrestApps.OrchardCore.OpenAI.Azure.Core\CrestApps.OrchardCore.OpenAI.Azure.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
