--- a/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions.Pdf/CrestApps.OrchardCore.AI.Chat.Interactions.Pdf.csproj
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat.Interactions.Pdf/CrestApps.OrchardCore.AI.Chat.Interactions.Pdf.csproj
@@ -21,9 +21,6 @@
 
   <ItemGroup>
     <PackageReference Include="OrchardCore.Module.Targets" />
-    <PackageReference Include="OrchardCore.ContentManagement" />
-    <PackageReference Include="OrchardCore.ContentTypes.Abstractions" />
-    <PackageReference Include="OrchardCore.DisplayManagement" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,10 +31,10 @@
   <ItemGroup>
     <!-- 
       Ensure this module directly depends on the required packages so that when someone installs it, 
-      they won't need to manually include the AI Chat Interactions package. 
+      they won't need to manually include the AI Chat Interactions Documents package. 
       This guarantees the module functions correctly and resolves the feature dependency.
     -->
-    <ProjectReference Include="..\CrestApps.OrchardCore.AI.Chat.Interactions\CrestApps.OrchardCore.AI.Chat.Interactions.csproj" PrivateAssets="none" />
+    <ProjectReference Include="..\CrestApps.OrchardCore.AI.Chat.Interactions.Documents\CrestApps.OrchardCore.AI.Chat.Interactions.Documents.csproj" PrivateAssets="none" />
   </ItemGroup>
 
 </Project>
