Fix AI function and server authentication

--- a/src/Startup/CrestApps.OrchardCore.Cms.Web/appsettings.development.json
+++ b/src/Startup/CrestApps.OrchardCore.Cms.Web/appsettings.development.json
@@ -4,5 +4,13 @@
       "Default": "Debug",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "OrchardCore": {
+    "CrestApps_AI": {
+      "McpServer": {
+        "AuthenticationType": "None", // Options: None, ApiKey, OpenId
+        "ApiKey": null
+      }
+    }
   }
 }
