Fix the path to CrestApps.OrchardCore.Cms.Core.Targets.targets

--- a/src/Targets/CrestApps.OrchardCore.Cms.Core.Targets/CrestApps.OrchardCore.Cms.Core.Targets.csproj
+++ b/src/Targets/CrestApps.OrchardCore.Cms.Core.Targets/CrestApps.OrchardCore.Cms.Core.Targets.csproj
@@ -12,8 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="OrchardCore.Application.Cms.Core.Targets.targets" Pack="true">
-      <PackagePath>build\OrchardCore.Application.Cms.Core.Targets.targets</PackagePath>
+    <None Include="CrestApps.OrchardCore.Cms.Core.Targets.targets" Pack="true">
+      <PackagePath>build\CrestApps.OrchardCore.Cms.Core.Targets.targets</PackagePath>
     </None>
   </ItemGroup>
 
