add sample project and fix UI

--- a/src/Startup/CrestApps.Aspire.AppHost/CrestApps.Aspire.AppHost.csproj
+++ b/src/Startup/CrestApps.Aspire.AppHost/CrestApps.Aspire.AppHost.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <Sdk Name="Aspire.AppHost.Sdk" Version="9.0.0" />
 
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CrestApps.OrchardCore.Cms.Web\CrestApps.OrchardCore.Cms.Web.csproj" />
+    <ProjectReference Include="..\CrestApps.OrchardCore.Samples.McpClient\CrestApps.OrchardCore.Samples.McpClient.csproj" />
   </ItemGroup>
 
 </Project>
