--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -13,6 +13,7 @@
     <PackageVersion Include="YesSql.Core" Version="5.4.7" />
     <PackageVersion Include="ModelContextProtocol" Version="0.7.0-preview.1" />
     <PackageVersion Include="ModelContextProtocol.AspNetCore" Version="0.7.0-preview.1" />
+    <PackageVersion Include="ModelContextProtocol.Core" Version="0.7.0-preview.1" />
     <PackageVersion Include="DocumentFormat.OpenXml" Version="3.4.1" />
     <PackageVersion Include="PdfPig" Version="0.1.13" />
   </ItemGroup>
