--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,6 +7,7 @@
   <ItemGroup>
     <!-- Miscellaneous Packages -->
     <PackageVersion Include="FluentFTP" Version="52.1.0" />
+    <PackageVersion Include="Lucene.Net.Analysis.Common" Version="4.8.0-beta00017" />
     <PackageVersion Include="NuGet.Versioning" Version="7.0.1" />
     <PackageVersion Include="OllamaSharp" Version="5.4.16" />
     <PackageVersion Include="SSH.NET" Version="2024.2.0" />
