--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,6 +18,7 @@
     <PackageVersion Include="ModelContextProtocol.Core" Version="0.8.0-preview.1" />
     <PackageVersion Include="DocumentFormat.OpenXml" Version="3.4.1" />
     <PackageVersion Include="PdfPig" Version="0.1.13" />
+    <PackageVersion Include="GitHub.Copilot.SDK" Version="0.1.10-preview.2" />
     <PackageVersion Include="CrestApps.OrchardCore.AgentSkills" Version="1.0.0-beta-0007" />
     <PackageVersion Include="CrestApps.OrchardCore.AgentSkills.Mcp" Version="1.0.0-beta-0007" />
   </ItemGroup>
