--- a/tests/CrestApps.OrchardCore.Tests/CrestApps.OrchardCore.Tests.csproj
+++ b/tests/CrestApps.OrchardCore.Tests/CrestApps.OrchardCore.Tests.csproj
@@ -20,6 +20,8 @@
     <ProjectReference Include="..\..\src\Core\CrestApps.OrchardCore.AI.Mcp.Core\CrestApps.OrchardCore.AI.Mcp.Core.csproj" />
     <ProjectReference Include="..\..\src\Core\CrestApps.OrchardCore.Core\CrestApps.OrchardCore.Core.csproj" />
     <ProjectReference Include="..\..\src\Core\CrestApps.OrchardCore.OpenAI.Azure.Core\CrestApps.OrchardCore.OpenAI.Azure.Core.csproj" />
+    <ProjectReference Include="..\..\src\Modules\CrestApps.OrchardCore.AI.DataSources.AzureAI\CrestApps.OrchardCore.AI.DataSources.AzureAI.csproj" />
+    <ProjectReference Include="..\..\src\Modules\CrestApps.OrchardCore.AI.DataSources.Elasticsearch\CrestApps.OrchardCore.AI.DataSources.Elasticsearch.csproj" />
     <ProjectReference Include="..\..\src\Modules\CrestApps.OrchardCore.AI.Mcp\CrestApps.OrchardCore.AI.Mcp.csproj" />
   </ItemGroup>
 
