--- a/src/Core/CrestApps.OrchardCore.AI.Core/CrestApps.OrchardCore.AI.Core.csproj
+++ b/src/Core/CrestApps.OrchardCore.AI.Core/CrestApps.OrchardCore.AI.Core.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Lucene.Net.Analysis.Common" />
     <PackageReference Include="Microsoft.Extensions.AI" />
     <PackageReference Include="OrchardCore.Indexing.Core" />
+    <PackageReference Include="OrchardCore.Navigation.Core" />
   </ItemGroup>
 
   <ItemGroup>
