--- a/.github/workflows/release_ci.yml
+++ b/.github/workflows/release_ci.yml
@@ -23,11 +23,9 @@ jobs:
     - name: Get the version
       id: get_version
       run: |
-        arrTag=(${GITHUB_REF//\// })
-        VERSION="${arrTag[2]}"
-        VERSION="${VERSION//v}"
-        echo VERSION:${VERSION}
-        echo "VERSION=${VERSION}" >> $GITHUB_OUTPUT
+         # Strip leading 'v' if present
+         VERSION="${GITHUB_REF_NAME#v}"
+         echo "VERSION=${VERSION}" >> $GITHUB_OUTPUT
       shell: bash
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
