--- a/src/Startup/CrestApps.Aspire.AppHost/CrestApps.Aspire.AppHost.csproj
+++ b/src/Startup/CrestApps.Aspire.AppHost/CrestApps.Aspire.AppHost.csproj
@@ -5,6 +5,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <IsAspireHost>true</IsAspireHost>
+    <IsPackable>false</IsPackable>
     <UserSecretsId>0e4ae8bf-0fbf-43e7-b88a-91a70740841c</UserSecretsId>
   </PropertyGroup>
 
