--- a/src/Modules/CrestApps.OrchardCore.Resources/package.json
+++ b/src/Modules/CrestApps.OrchardCore.Resources/package.json
@@ -5,6 +5,7 @@
     "@fortawesome/fontawesome-free": "6.7.2",
     "easymde": "2.18.0",
     "flatpickr": "4.6.13",
+    "highlight.js": "^11.11.1",
     "marked": "^15.0.7",
     "vue": "3.5.13",
     "vuedraggable": "2.24.3",
